# ai-spec-based-development-helper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  package.json
.claude/: hooks.json
.claude/agents/: architecture-reviewer.md  implementation-validator.md  spec-analyzer.md  test-runner.md
.claude/commands/: arch-review.md  spec-init.md  spec-review.md  spec-status.md  test-api.md  test-unit.md  test.md  validate.md
.claude/hooks/: post-edit-validation.sh  pre-implementation-check.sh  quality-reminder.sh
.claude/lib/: context7-query.md  project-analyzer.sh
.specs/: constitution-system-spec.approved.md  constitution-system-spec.md  context7-integration-spec.approved.md  context7-integration-spec.md  test-runner-spec.approved.md  test-runner-spec.md
.test/: E2E_TEST_README.md  TESTING_GUIDE.md  e2e-test-scenarios.md  run-constitution-tests.sh  run-e2e-tests.sh
.test-samples/python-basic/: pyproject.toml
.test-samples/python-basic/.specs/: calculator-spec.md
.test-samples/python-basic/src/: calculator.py
.test-samples/python-basic/tests/: test_calculator.py
.test-samples/typescript-basic/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: CONTEXT7_INTEGRATION.md  README.md
docs/getting-started/: installation.md  (+1 more)
scripts/: check-structure.js  init-workspace-project.sh  install.sh
templates/: api-spec-template.md  constitution-template.md  feature-spec-template.md  language-spec-guide.md  program-spec-template.md  ui-ux-spec-template.md
workspaces/: README.md
(+18 files in other folders)
